# alalu

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  grid_search.py  grid_search_with_volume.py  main.py  master.py  master_x5.py  pyproject.toml  real_time_forward_testing.csv
alalu_bot/: api.py  backtest.py  dashboard.py  engine.py  notify.py  test_engine.py  trade_log.py
alalu_bot/dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
alalu_bot/dashboard/src/: App.tsx  api.ts  index.css  types.ts
alalu_bot/dashboard/src/components/: EquityChart.tsx  MarketTable.tsx  MetricCard.tsx  Navbar.tsx  PnlChart.tsx  PositionsPanel.tsx  SessionBadge.tsx  StatsPanel.tsx
