[project]
name = "alalu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtesting>=0.6.5",
    "black>=26.3.1",
    "ccxt>=4.5.44",
    "debugpy>=1.8.20",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "plotly>=6.6.0",
    "ruff>=0.15.6",
    "streamlit>=1.55.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
